fix: set db environment correctly

--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=psql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=8801
-DB_DATABASE=admin
+DB_PORT=8001
+DB_DATABASE=laravel
 DB_USERNAME=admin
 DB_PASSWORD=admin
 
