--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "devDependencies": {
         "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
+        "flowbite": "^2.2.0",
+        "flowbite-typography": "^1.0.3",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.3.5",
